# specfit

./: README.md  exmaple_C2H_TW_Hya.ipynb  pyproject.toml
data/: TW_Hya_C2H_4-3_spectrum_stacked_0.8-1.8.h5  TW_Hya_C2H_4-3_spectrum_stacked_0.95arcsec-1.05arcsec.h5  TW_Hya_C2H_4-3_spectrum_stacked_1.0arcsec-1.2arcsec.h5
data/fit/C2H_full/: parameters.pkl
specfit/: constants.py  core.py  specdata.py  utils.py
