[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Yoshihide Yamato", email = "yyamato.as@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "emcee",
    "corner",
    "matplotlib",
    "h5py",
    "astroquery"
]
description = "Spectral Modeling for Molecular Line Data"
dynamic = ["version"]
name = "SpM"
readme = "README.md"
requires-python = ">=3.8"